test/arrays/sungeun/invalid_block_reindex2.good
invalid_block_reindex2.chpl:13: error: halt reached - invalid reindex for Block: distribution bounding box (high) out of range in dimension 1
